fixed css overlap in headers & updated readme

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ html {
   width: 100%;
   height: 80%;
   position: absolute;
-  top: 20%;
+  top: 15%;
   left: 0;
   display: flex;
   flex-direction: column;
