--- a/src/GamePage.css
+++ b/src/GamePage.css
@@ -35,7 +35,9 @@ button {
 }
   
 .game {
-    height: calc(100vh - 75px);
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
   
 .gameHeader {
@@ -89,7 +91,6 @@ button {
 .board {
     position: relative;
     z-index: 0;
-    margin-top: 15px;
     width: 70%;
     min-width: 250px;
     aspect-ratio: 1;
