--- a/src/lessons/LessonSelector.css
+++ b/src/lessons/LessonSelector.css
@@ -15,14 +15,38 @@ html {
     align-items: center;
     justify-content: space-evenly;
 }
+  
+header {
+    background-color: black;
+    position: relative;
+    display: grid;
+    place-items: center;
+    font-size: calc(10px + 2vmin);
+    width: 100%;
+    height: 75px;
+}
 
 .lessonBackBtn {
-    position: absolute;
     width: 52px;
     aspect-ratio: 1;
-    top: 15px;
+    position: absolute;
+    top: 50%;
     right: 15px;
+    transform: translateY(-50%);
     background-image: url('../assets/back.svg');
+    background-size: 90%;
+    background-position: top;
+    background-repeat: no-repeat;
+}
+
+.lessonPage {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .lessonTitle {
@@ -81,24 +105,29 @@ html {
 }
 
 .active {
-    background-color: #555555;
+    background-color: #111111;
 }
 
 .tabPanel {
     font-size: 1.2rem;
     padding: 15px;
-    background-color: #555555;
+    background-color: #111111;
     list-style-position: inside;
     width: calc(100% - 30px);
-    height: clamp(5rem, 10rem, 80%);
+    min-height: 15rem;
+    max-height: 80%;
+    overflow-y: auto;
 }
 
 .lessonItem {
     cursor: pointer;
+    height: 1.5rem;
+    border-radius: 5px;
+    padding: 2px 0px 2px 15px;
 }
 
 .lessonItem:hover {
-    background-color: #4b4b4b;
+    background-color: #191919;
 }
 
 .incomplete {
